# AI-pair-programming

./: .agentsignore  .ai.alias.zshrc  .gitignore  .rulesignore  .skillsignore  AGENTS.md  CHANGELOG.md  MEMORY.md  README.md  converter.py  generate-context-ia.py  generate-documentation.instructions.md  get_relative_context.py  get_size_tokens.py  install.sh  md2toml.py  my_mcp_client_stdio.py  split_by_tokens.py  srs-generator-reflexion.instructions.md  srs-generator-self-consistency.md  toml2md.py
.claude/: context-refs.json
agents/: codebase-rules-extractor-specialist.agent.md  context-architect-specialist.agent.md  cybersecurity-specialist.agent.md  cybersecurity.agent.md  database-especialist.agent.md  database-specialist.agent.md  design-pattern-specialist.agent.md  developer-planning-specialist.agent.md  developer-specialist.agent.md  doc-usability-specialist.agent.md  doc-usability.agent.md  git-specialist.agent.md  (+15 more)
src/: copilot_api.py  generate-context-ia.py  my_mcp_client_stdio.py  my_mcp_server.py  my_mcp_test.py  ollama_cloud_proxy.py  ollama_local_proxy.py  pyproject.toml  requirements.txt  search_engine.py
src/copilot/: config.models.yaml  conftest.py  copilot_api.py  copilot_ollama.py  copilot_playwright.py  test_config_loading.py  test_fallback_behavior.py  test_large_prompt_attachment.py  test_model_validation.py  teste.py
src/mcps/: mongodb_mcp.py  my_mcp_server.py  mysql_mcp.py  postgresql.py  postgresql_mcp.py  search_engine.requirements.txt  skill_loader_mcp.py  sqlite_mcp.py
src/sdk/: hello_world.py  lint_fix_agent.py  linter_solver.py
(+443 files in other folders)
